# originfortress

./: .dockerignore  .gitignore  .npmignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  clawmoat-0.8.0.tgz  package.json
.github/workflows/: ci.yml  publish.yml  test.yml
docs/: CNAME  MIT-RISK-GAP-ANALYSIS.md  ai-agent-security-scanner.html  checklist.html  compare.html  hall-of-fame.html  index.html  install.sh  playground.html  positioning-v2.md  report-demo.html  robots.txt  sitemap.xml  thanks.html
docs/affiliates/: dashboard.html  index.html
docs/badge/: index.html
docs/blog/: 386-malicious-skills.html  40000-exposed-openclaw-instances.html  agent-trust-protocol.html  ai-agent-earns-commissions.html  calculator-math.html  clawmoat-vs-llamafirewall-nemo-guardrails.html  host-guardian-launch.html  host-guardian-launch.md  ibm-experts-agent-runtime-protection.html  index.html  langchain-security-tutorial.html  mcp-30-cves-security-crisis.html  meta-researcher-rogue-agent.html  microsoft-openclaw-workstation-security.html  (+11 more)
examples/: basic-usage.js  github-action-workflow.yml
integrations/crewai/: README.md  pyproject.toml
integrations/crewai/origin_fortress_crewai/: __init__.py  guard.py
integrations/langchain/: README.md  pyproject.toml
integrations/langchain/origin_fortress_langchain/: __init__.py  callback.py
server/: index.js  index.js.patch  package.json
site/: index.html  thanks.html
skill/: README.md  SKILL.md
src/: badge.js  index.js
test/: cve-verify.test.js  finance.test.js  gateway-monitor.test.js  guardian.test.js  init.test.js  insider-threat.test.js  json-formatter.test.js  live-monitor.test.js  mcp-firewall.test.js  sarif-formatter.test.js  scanners.test.js
wiki/: Architecture.md  CLI-Reference.md  FAQ.md  Home.md  Policy-Engine.md  Scanner-Modules.md
(+69 files in other folders)
