[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "origin-fortress-crewai"
version = "0.1.0"
description = "Origin Fortress security guardrails for CrewAI — scan agent tasks, tool calls, and outputs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Origin Fortress", email = "hello@origin-fortress.com" }]
keywords = ["crewai", "security", "ai-agents", "prompt-injection", "origin-fortress"]
dependencies = [
    "crewai>=0.28.0",
    "origin-fortress-langchain>=0.1.0",
]

[project.urls]
Homepage = "https://origin-fortress.com"
Repository = "https://github.com/darfaz/origin-fortress"
