[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "origin-fortress-langchain"
version = "0.1.0"
description = "Origin Fortress security callbacks for LangChain — prompt injection, jailbreak, PII, and secret scanning"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Origin Fortress", email = "hello@origin-fortress.com" }]
keywords = ["langchain", "security", "ai-agents", "prompt-injection", "origin-fortress"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    "langchain-core>=0.1.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[project.urls]
Homepage = "https://origin-fortress.com"
Repository = "https://github.com/darfaz/origin-fortress"
Issues = "https://github.com/darfaz/origin-fortress/issues"
